sff-2020-5-2 用户基本信息的修改(昵称、头像、密码、邮箱、手机)
Change-Id: I51ca4ca1be08c13fa7a7263b94a750a54c160df1

--- a/MyShop/WebRoot/static/css/ui/demo.css
+++ b/MyShop/WebRoot/static/css/ui/demo.css
@@ -21,3 +21,10 @@ h2 {
     line-height: 22px;
     vertical-align: middle;
 }
+.easyui-tabs:after{
+	content: "";
+	display: block;
+	clear: both;
+	
+}
+..easyui-tabs{overflow: hidden;}
