--- a/MyShop/WebRoot/static/css/order.css
+++ b/MyShop/WebRoot/static/css/order.css
@@ -16,10 +16,11 @@ a{color: #000000; text-decoration: none;}
 			
 			
 			.logo_img{width: 100px;} 
-			.main{width: 950px; margin: 0 auto;} 
+			.main{width: 950px;min-height:500px; margin: 0 auto;} 
 			/*.main *{border: 0px; }*/
 			td span{display: block;text-align: center;}
 			table .th{background: #FF5000; color: #fff;}
-			table .tr td{border: 1px solid #FF5000;}
+			table .tr td{border: 1px solid #FF5000;text-align: center;}
+			span.default{ display: inline-block;font-size:15px; width: 60px; height: 25px; line-height: 20px;  text-align: center; border: 1px solid #ff5000;  border-radius: 3px;  background: #ffd6cc;  color: #f30;}
 			
 			
