--- a/MyShop/WebRoot/static/css/goodinfo.css
+++ b/MyShop/WebRoot/static/css/goodinfo.css
@@ -1,4 +1,4 @@
-*{padding: 0 ; margin: 0; /* border: 1px solid red; */ box-sizing: border-box;}
+			*{padding: 0 ; margin: 0; /* border: 1px solid red; */ box-sizing: border-box;}
 			li{list-style: none;}
 			.property{border: 1px solid #E9E9E9;}
 			
@@ -51,3 +51,5 @@
 			.property{padding: 15px;margin: 5px;}
 			.property .key{display: inline-block; width: 200px; text-align: left; text-indent: 2em; line-height: 30px;font: 20px;}
 			
+				#g_y_txt,#g_y,#g_n_txt,#g_n,
+									#s_y_txt,#s_y,#s_n,#s_n_txt{display: none;}
