--- a/MyShop/WebRoot/static/css/nav.css
+++ b/MyShop/WebRoot/static/css/nav.css
@@ -1,21 +1,21 @@
-			*{font-size:13px;}
+			.top_nav  *{font-size:13px;}
 			.top_nav{width: 100%; min-width: 1200px;text-align: center; }
 			.top_nav{background: #F1F7EB;height: 23px;line-height: 20px;} 
 			.cate_list{text-align: left;}
 			
-			.top_nav_list_left,.top_nav_list_right,.li{display: inline-block;position: relative;vertical-align: top;}
+			.top_nav_list_left,.top_nav_list_right,.top_nav .li{display: inline-block;position: relative;vertical-align: top;}
 			.img_li{width: 10px;height: 5px;vertical-align: middle;}
 			.top_nav_list_left{width: 500px;}
-			a{color:#000;text-decoration:none;}
-			a:hover{color: #FF5000;}
-			a{padding:0 4px;}
-			li{list-style: none;}
-			img,span{vertical-align: middle;}
+			.top_nav a{color:#000;text-decoration:none;}
+			.top_nav a:hover{color: #FF5000;}
+			.top_nav a{padding:0 4px;}
+			.top_nav li{list-style: none;}
+			.top_nav img,.top_nav span{vertical-align: middle;} */
 			.bold{font-weight:bolder ;}
 			.orangle{color: #FF5000;}
 			.s20{font-size: 20px;}
 			
-			.li{display:inline-block; background:  #F1F7EB;margin:0 15px;}
+			.top_nav .li{display:inline-block; background:  #F1F7EB;margin:0 15px;}
 			.li_menu_li{display: none;}		
 			.li:hover .li_menu_li{display: block;}	
 			
