--- a/MyShop/WebRoot/static/css/index.css
+++ b/MyShop/WebRoot/static/css/index.css
@@ -49,17 +49,7 @@
 			.price_sum span{ color:#ff4e00; font-size:20px; font-weight:bold;}
 			.price_a{float:right; width:120px; height:35px; line-height:35px; overflow:hidden; background:url(../img/a_link.gif) repeat-x center top; color:#FFF; font-size:14px; text-align:center; margin-right:13px; margin-top:5px; margin-bottom:20px; -webkit-border-radius:2px; -moz-border-radius:2px; border-radius:2px;}
 			.price_a a{ color:#FFF;}
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
-			
+			 
 			
 			.li_a{padding: 0 10px;font-size: 10px; text-align: left;}
 			.nav_title{padding: 0 10px; margin-top: 5px;}
@@ -70,7 +60,7 @@
 			.news .button{float: none; width: 60px;border-radius: 5px;border: #FF5000 2px solid; padding:2px;background: #FF5000; color: #fff;font-size: 13px;}
 			.news{text-align: left;}
 			.info_user{text-align: center;}
-			
+			.cate_list{width: 195px;}
 			.cate_list,.banner,.news{display: inline-block;vertical-align: middle;}
 			.cate_list{border: 1px #FF0000 solid;}
 			.cate_li{border-bottom: 1px darkgray solid;text-indent: 2em;}
@@ -83,11 +73,11 @@
 			.banner{
 				width:740px; height:401px; overflow:hidden;  display:inline-block; 
 			}
-			
+			/* 
 			.banner .top_slide_wrap{ width:740px; height:401px; overflow:hidden; position:relative; z-index:1; }
 			.banner .slide_box{ height:401px; overflow:hidden; }
-			.banner .slide_box li{ height:401px; position:relative; }
-			.banner .slide_box li a{ width:740px; height:401px; display:block; }
+			 .banner .slide_box li{ height:401px; position:relative; }
+			.banner .slide_box li a{ width:740px; height:401px; display:block; } 
 			.banner .slide_box img{ text-align:center; height:420px; }
 			.banner .slide_info{ width:740px; margin:-530px auto 0; }
 			.banner .slide_info_card{width:420px;height:0;margin-top:171px;color:#fff;position:relative;}
@@ -97,7 +87,7 @@
 			.banner .slide_info_card h2{font-size:40px;padding-bottom:8px}
 			.banner .slide_info_card p{font-size:15px;line-height:26px}
 			.banner .slide_info_card p strong{font-size:12px;height:25px;display:inline-block;padding:0 10px;background:#095b99;border-radius:5px;color:#fff;margin-top:8px}
-			/* op_btns */
+			op_btns
 			.banner .op_btns{ width:740px; margin-top:-730px;  position:relative; z-index:3; }
 			.banner .op_btns .op_btn{display:block; width:32px; height:60px; cursor:pointer; overflow:hidden; position:absolute; margin-top:80px;  }
 			.banner .op_btns .op_prev{ background:url(../img/b_left.png) no-repeat center top; left:0; top:420px; }
@@ -105,10 +95,12 @@
 			.banner .op_btns .op_prev span, .banner .op_btns .op_next span{ display:block; width:32px; height:60px; margin:8px 0 0 17px; cursor:pointer; }
 			.banner .op_btns .op_prev span{background-position:0 0;}
 			.banner .op_btns .op_next span{background-position:-73px 0;margin-left:20px;}
- 			.shopping{margin:10 auto;}
+ 			 */
+ 			
+ 			.shopping{margin:20px auto;}
  			.partial{width: 600px;display: inline-block;text-align: left;}
 			.info,.info_li,.info_a{display: inline-block;}
-			.info,.info_li{padding: 5px;}
+			.info,.info_li{padding: 6px;}
 			.info_img,.info_img img,.info_txt{width: 170px;}
 			.info h3{font-weight: 400;font-size: 14px;}
 			.info_txt .p{font-size: 12px;color: #A9A9A9;}
