sff-2020-5-10--购物车批量删除、添加收藏、结算 Change-Id: Ic7a265061c6007fac23b58507f36009415fd7285

--- a/MyShop/WebRoot/static/css/index.css
+++ b/MyShop/WebRoot/static/css/index.css
@@ -17,6 +17,7 @@
 			
 			.li{display:inline-block; background:  #F5F5F5;margin:0 15px;}
 			.li_menu_li{display: none;}		
+			.li_menu_li{line-height: 18px;height: 20px;border-bottom: 1px #ccc solid;}
 			.li:hover .li_menu_li{display: block;}	
 			
 			.head{margin: 8px auto;}
