--- a/MyShop/WebRoot/static/css/login.css
+++ b/MyShop/WebRoot/static/css/login.css
@@ -1,15 +1,15 @@
-*{padding: 0; margin: 0; box-sizing: border-box;/* border: 1px solid red;*/}
+		*{padding: 0; margin: 0; box-sizing: border-box;/* border: 1px solid red;*/}
 			.bg{position: relative;}
-			.bg .img{ position: absolute;  z-index: -1; top: 0; left: 0;  background-size: cover; background-repeat: no-repeat;  background-position: 50%;  width: 100%;  height: 600px; }
-			.logo,.form-field{    width: 1200px; margin: 0 auto; overflow: hidden;  position: relative;   height: 600px;   z-index: 2;}
+			.bg .img{ position: absolute;  z-index: -1; top: 0; left: 0;  background-size: cover; background-repeat: no-repeat;  background-position: 50%;  width: 100%;  height: 500px; }
+			.logo,.form-field{    width: 1200px; margin: 0 auto; overflow: hidden;  position: relative;   height: 500px;   z-index: 2;}
 			.logo{height: auto;}
-			.right{width: 350px;height: 350px;padding: 25px; background-color:#fff;  position: absolute; top: 120px;  right: 60px; }
+			.right{width: 350px;height: 350px;padding: 25px; background-color:#e9e9e9;  position: absolute; top: 90px;  right: 60px; z-index: 5;}
 			.login .title{display: inline-block;vertical-align: middle;}
-			div.form{position: relative;}
+			div.forms{position: relative;}
 			.form_password,.form_email{width: 300px;height: 240px;position: absolute;}
 			div.name input,div.password input,div.submit input,div.code input{display:inline-block; width: 300px;height: 42px; border: 1px #f1eeee solid;}
 			div.name input,div.password input,div.code input{padding-left: 50px;}
-			div.login,div.name,div.password,div.code{margin-bottom: 20px;position: relative;}
+			div.login,div.name,div.password,div.code{margin-bottom: 20px;position: relative;z-index: 500;}
 			div.bottom_a{margin-top: 20px;text-align: right;}
 			.title{cursor: pointer;height: 18px;font-size: 16px;font-weight: bolder;margin: 9px 10px 0 0;line-height: 5px;}
 			#title_pwd{border-bottom: 2px #000000 solid;}
@@ -18,6 +18,10 @@
 			a:hover { color: #f40;}
 			.code a.get_code{  text-decoration: none; color: #6c6c6c; font-size: 12px;line-height: 42px;}
 			.code span{position: absolute;right: 20px;top: 0;}
-			.icon{width: 40px; height: 40px;position: absolute;  line-height: 40px; text-align: center; color: #fff;  position: absolute; left: 1px; bottom: 1.4px; background-color: #ccc;}
+			.icon{width: 40px; height: 42px;position: absolute;  line-height: 41px; text-align: center; color: #fff;  position: absolute; left: 0px; bottom: 0px; background-color: #ccc;}
 		
 			#form_email{display: none;}
+			
+			div.auto input,div.auto label{vertical-align: middle;}
+			.send_code{display: none;}
+			#load{display: none;}
