--- a/MyShop/WebRoot/static/css/login.css
+++ b/MyShop/WebRoot/static/css/login.css
@@ -3,11 +3,11 @@
 			.bg .img{ position: absolute;  z-index: -1; top: 0; left: 0;  background-size: cover; background-repeat: no-repeat;  background-position: 50%;  width: 100%;  height: 500px; }
 			.logo,.form-field{    width: 1200px; margin: 0 auto; overflow: hidden;  position: relative;   height: 500px;   z-index: 2;}
 			.logo{height: auto;}
-			.right{width: 350px;height: 350px;padding: 25px; background-color:#e9e9e9;  position: absolute; top: 90px;  right: 60px; z-index: 5;}
+			.right{width: 350px;height: 350px;padding: 25px; background-color:/* #e9e9e9 */#F9FDFF;  position: absolute; top: 90px;  right: 60px; z-index: 5;}
 			.login .title{display: inline-block;vertical-align: middle;}
 			div.forms{position: relative;}
 			.form_password,.form_email{width: 300px;height: 240px;position: absolute;}
-			div.name input,div.password input,div.submit input,div.code input{display:inline-block; width: 300px;height: 42px; border: 1px #f1eeee solid;}
+			div.name input,div.password input,div.submit input,div.code input{display:inline-block; width: 300px;height: 42px; border: 1px #f1eeee solid;outline: none;}
 			div.name input,div.password input,div.code input{padding-left: 50px;}
 			div.login,div.name,div.password,div.code{margin-bottom: 20px;position: relative;z-index: 500;}
 			div.bottom_a{margin-top: 20px;text-align: right;}
