--- a/MyShop/WebRoot/static/css/index.css
+++ b/MyShop/WebRoot/static/css/index.css
@@ -2,7 +2,9 @@
 			.footer,.hot,.shopping,.main_body,.nav,.head,.top_nav{width: 100%; min-width: 1200px;text-align: center; }
 			.top_nav{background: #F5F5F5;height: 40px;line-height: 38px} 
 			.cate_list{text-align: left;}
+			input{outline: none;}
 			
+			.tabs {   width: 700px;  }
 			.top_nav_list_left,.top_nav_list_right,.li{display: inline-block;position: relative;vertical-align: top;}
 			.img_li{/* width: 10px;height: 5px; */vertical-align: middle;}
 			.top_nav_list_left{width: 500px;text-align: left;}
