--- a/MyShop/WebRoot/static/css/register.css
+++ b/MyShop/WebRoot/static/css/register.css
@@ -8,7 +8,7 @@
 			.register input[type*='te'],.register input[type*='pass'],.register input[type*='submit']{
 				display: block; width: 300px; height: 30px;border-radius: 0px; border: 1px #000 solid;text-indent: 1em;}
 			.register .input{width: 300px;}
-			.register .msg{width:200px;color: red; float: left;vertical-align: middle; }
+			.register .msg{width:200px;color: red; float: left;vertical-align: middle; margin-top: 12px;font-size: 12px}
 			.register .label{width:120px ;vertical-align: middle; }
 			.register td{vertical-align: center;}
 			.register span[id*='id']{font-size:9px;}
