--- a/MyShop/WebRoot/static/css/index.css
+++ b/MyShop/WebRoot/static/css/index.css
@@ -1,3 +1,5 @@
+			.top_nav{position: relative;z-index: 5;}
+			
 			img,*{padding: 0; margin: 0; /* border: 0px dashed red; */ font-size: 13px;box-sizing: border-box;}
 			.footer,.hot,.shopping,.main_body,.nav,.head,.top_nav{width: 100%; min-width: 1200px;text-align: center; }
 			.top_nav{background: #F5F5F5;height: 40px;line-height: 38px} 
@@ -37,7 +39,7 @@
 			.head_logo img{width: 190px;height: 97px;margin-top: -5px;}
 			/* 购物车*/
 			.i_car *{/* border :1px solid red ; */ text-align: left;}
-			.i_car{	width:141px; height:38px; line-height:38px; background:url(../img/car.png) no-repeat 10px center; background-color:#f6f6f6;     border:1px solid #d9d9d9; position:relative;top:-6px;left: -40px;}
+			.i_car{	width:141px; height:38px; line-height:38px; background:url(../img/car.png) no-repeat 10px center; background-color:#f6f6f6;     border:1px solid #d9d9d9; position:relative;top:-6px;left: -40px;z-index: 1	;}
 			.car_t{width:95px; height:38px; overflow:hidden; background:url(../img/d_arrow.png) no-repeat right center; font-size:14px; margin-left:30px; cursor:pointer;}
 			.car_t span{color:#ff4e00;}
 			.i_car:hover .car_bg{ display:block; }
